--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,4 +15,22 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.img {
+  width: 10pc;
+  padding: 10px;
+  float: left;
+}
+
+.Review {
+  list-style-type: none;
+  border-color: #282c34;
+  border-style: solid;
+  margin: 10px;
+  padding-bottom: 90px;
+}
+
+.Review_title {
+  font-weight: bold;
 }
