--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,14 @@
   background-color: white;
 }
 
+.Category {
+  list-style-type: none;
+  border-color: #282c34;
+  border-style: solid;
+  margin: 10px;
+  background-color: white;
+}
+
 .Review {
   list-style-type: none;
   border-color: #282c34;
@@ -78,5 +86,13 @@
 }
 
 .Comment_votes {
+  background-color: white;
+}
+
+.category_title {
+  background-color: white;
+}
+
+.category_description {
   background-color: white;
 }
