--- a/src/App.css
+++ b/src/App.css
@@ -115,3 +115,11 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+.category_title {
+  background-color: white;
+}
+
+.category_description {
+  background-color: white;
+}
